--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php" : ">=5.5.9",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle" : "^6.2 || ^7.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~1.12.2"
