--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "enniel/epochta",
+    "name": "vzaichikov/epochta",
     "type": "library",
     "description": "Epochta PHP client",
     "keywords": [
