--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php" : ">=5.5.9",
-        "guzzlehttp/guzzle" : "^6.2 || ^7.4",
+        "guzzlehttp/guzzle" : "^7.4",
         "guzzlehttp/uri-template": "^1.0"
     },
     "require-dev": {
